complete login flow

--- a/Split_It/Add_Expense_Pages/AddPayment.xaml
+++ b/Split_It/Add_Expense_Pages/AddPayment.xaml
@@ -12,6 +12,7 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="False"
+    Name="root"
     Loaded="PhoneApplicationPage_Loaded">
 
     <phone:PhoneApplicationPage.Resources>
