--- a/Split_It/Login.xaml
+++ b/Split_It/Login.xaml
@@ -6,11 +6,13 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
+    Loaded="PhoneApplicationPage_Loaded"
     shell:SystemTray.IsVisible="False">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -21,7 +23,11 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="0" Margin="12,0,12,0">
-            <phone:WebBrowser Name="loginBrowser" Navigating="loginBrowser_Navigating"/>
+            <phone:WebBrowser Name="loginBrowser" Navigating="loginBrowser_Navigating" Navigated="loginBrowser_Navigated" NavigationFailed="loginBrowser_NavigationFailed"/>
+            <telerikPrimitives:RadBusyIndicator Background="#CC000000"
+                                                Foreground="White"
+                                                x:Name="busyIndicator"
+                                                AnimationStyle="AnimationStyle9"/>
         </Grid>
     </Grid>
 
