ask for additional details in add expense

--- a/Split_It/Add_Expense_Pages/AddPayment.xaml
+++ b/Split_It/Add_Expense_Pages/AddPayment.xaml
@@ -7,229 +7,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:app="clr-namespace:Split_It_.Converter"
     xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
-    xmlns:PhoneTextBox="clr-namespace:Telerik.Windows.Controls.PhoneTextBox;assembly=Telerik.Windows.Controls.Primitives" xmlns:System="clr-namespace:System;assembly=mscorlib"
     x:Class="Split_It_.Add_Expense_Pages.AddPayment"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
+    FontFamily="{StaticResource PhoneFontFamilyNormal}" FontSize="{StaticResource PhoneFontSizeNormal}"
+    Foreground="{StaticResource PhoneForegroundBrush}"
     shell:SystemTray.IsVisible="False"
     Name="root"
     Loaded="PhoneApplicationPage_Loaded">
 
     <phone:PhoneApplicationPage.Resources>
         <app:CacheImageFileConverter x:Key="PictureFileConverter"/>
-    	<Style x:Key="HeaderedContentControlHeaderStyle" TargetType="ContentControl">
-    		<Setter Property="Foreground" Value="{StaticResource PhoneSubtleBrush}"/>
-    		<Setter Property="FontSize" Value="{StaticResource PhoneFontSizeNormal}"/>
-    		<Setter Property="HorizontalAlignment" Value="Left"/>
-    	</Style>
-    	<Style x:Key="TextBoxHeaderStyle" BasedOn="{StaticResource HeaderedContentControlHeaderStyle}" TargetType="ContentControl">
-    		<Setter Property="Padding" Value="0,0,0,8"/>
-    	</Style>
-    	<PhoneTextBox:TextToVisibilityConverter x:Key="TextToVisibilityConverter"/>
-    	<ControlTemplate x:Key="PhoneDisabledTextBoxTemplate" TargetType="TextBox">
-    		<ContentControl x:Name="ContentElement" BorderThickness="0" HorizontalContentAlignment="Stretch" Margin="{StaticResource PhoneTextBoxInnerMargin}" Padding="{TemplateBinding Padding}" VerticalContentAlignment="Stretch"/>
-    	</ControlTemplate>
-    	<SolidColorBrush x:Key="RedBrush" Color="#BF0000"/>
-    	<SolidColorBrush x:Key="GreenBrush" Color="#00813D"/>
-    	<Style x:Key="RadTextBoxStyle1" TargetType="telerikPrimitives:RadTextBox">
-    		<Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilyNormal}"/>
-    		<Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMediumLarge}"/>
-    		<Setter Property="Background" Value="{StaticResource PhoneTextBoxBrush}"/>
-    		<Setter Property="Foreground" Value="{StaticResource PhoneTextBoxForegroundBrush}"/>
-    		<Setter Property="BorderBrush" Value="{StaticResource PhoneTextBoxBrush}"/>
-    		<Setter Property="SelectionBackground" Value="{StaticResource PhoneAccentBrush}"/>
-    		<Setter Property="SelectionForeground" Value="{StaticResource PhoneTextBoxSelectionForegroundBrush}"/>
-    		<Setter Property="BorderThickness" Value="{StaticResource PhoneBorderThickness}"/>
-    		<Setter Property="HeaderStyle" Value="{StaticResource TextBoxHeaderStyle}"/>
-    		<Setter Property="Padding" Value="2"/>
-    		<Setter Property="ClearButtonVisibility" Value="Visible"/>
-    		<Setter Property="ActionButtonVisibility" Value="Collapsed"/>
-    		<Setter Property="Template">
-    			<Setter.Value>
-    				<ControlTemplate TargetType="telerikPrimitives:RadTextBox">
-    					<Grid Background="Transparent" Margin="{StaticResource PhoneTouchTargetOverhang}">
-    						<Grid.RowDefinitions>
-    							<RowDefinition Height="Auto"/>
-    							<RowDefinition Height="*"/>
-    						</Grid.RowDefinitions>
-    						<VisualStateManager.VisualStateGroups>
-    							<VisualStateGroup x:Name="CommonStates">
-    								<VisualState x:Name="Normal"/>
-    								<VisualState x:Name="MouseOver"/>
-    								<VisualState x:Name="Disabled">
-    									<Storyboard>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility" Storyboard.TargetName="EnabledBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0">
-    												<DiscreteObjectKeyFrame.Value>
-    													<Visibility>Collapsed</Visibility>
-    												</DiscreteObjectKeyFrame.Value>
-    											</DiscreteObjectKeyFrame>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility" Storyboard.TargetName="DisabledOrReadonlyBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0">
-    												<DiscreteObjectKeyFrame.Value>
-    													<Visibility>Visible</Visibility>
-    												</DiscreteObjectKeyFrame.Value>
-    											</DiscreteObjectKeyFrame>
-    										</ObjectAnimationUsingKeyFrames>
-    									</Storyboard>
-    								</VisualState>
-    								<VisualState x:Name="ReadOnly">
-    									<Storyboard>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility" Storyboard.TargetName="EnabledBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0">
-    												<DiscreteObjectKeyFrame.Value>
-    													<Visibility>Collapsed</Visibility>
-    												</DiscreteObjectKeyFrame.Value>
-    											</DiscreteObjectKeyFrame>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility" Storyboard.TargetName="DisabledOrReadonlyBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0">
-    												<DiscreteObjectKeyFrame.Value>
-    													<Visibility>Visible</Visibility>
-    												</DiscreteObjectKeyFrame.Value>
-    											</DiscreteObjectKeyFrame>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="DisabledOrReadonlyBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="DisabledOrReadonlyBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="DisabledOrReadonlyContent">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxReadOnlyBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    									</Storyboard>
-    								</VisualState>
-    							</VisualStateGroup>
-    							<VisualStateGroup x:Name="FocusStates">
-    								<VisualState x:Name="Focused">
-    									<Storyboard>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="EnabledBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxEditBackgroundBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="EnabledBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxEditBorderBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    									</Storyboard>
-    								</VisualState>
-    								<VisualState x:Name="FocusedInvalid">
-    									<Storyboard>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="EnabledBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxEditBackgroundBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="EnabledBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource RedBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    									</Storyboard>
-    								</VisualState>
-    								<VisualState x:Name="FocusedValid">
-    									<Storyboard>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="EnabledBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneTextBoxEditBackgroundBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="EnabledBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource GreenBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    									</Storyboard>
-    								</VisualState>
-    								<VisualState x:Name="Unfocused"/>
-    							</VisualStateGroup>
-    							<VisualStateGroup x:Name="ValidationStates">
-    								<VisualState x:Name="NotValidated"/>
-    								<VisualState x:Name="Validating">
-    									<Storyboard>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ValidationMessage">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneSubtleBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Width" Storyboard.TargetName="ValidationImage">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="0"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="IsRunning" Storyboard.TargetName="BusyIndicator">
-    											<DiscreteObjectKeyFrame KeyTime="0">
-    												<DiscreteObjectKeyFrame.Value>
-    													<System:Boolean>True</System:Boolean>
-    												</DiscreteObjectKeyFrame.Value>
-    											</DiscreteObjectKeyFrame>
-    										</ObjectAnimationUsingKeyFrames>
-    									</Storyboard>
-    								</VisualState>
-    								<VisualState x:Name="Valid">
-    									<Storyboard>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ValidationMessage">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource GreenBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Source" Storyboard.TargetName="ValidationImage">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="/Telerik.Windows.Controls.Primitives;Component/TextBox/Images/valid.png"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="ValidationBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource GreenBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    									</Storyboard>
-    								</VisualState>
-    								<VisualState x:Name="Invalid">
-    									<Storyboard>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ValidationMessage">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource RedBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Source" Storyboard.TargetName="ValidationImage">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="/Telerik.Windows.Controls.Primitives;Component/TextBox/Images/invalid.png"/>
-    										</ObjectAnimationUsingKeyFrames>
-    										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="ValidationBorder">
-    											<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource RedBrush}"/>
-    										</ObjectAnimationUsingKeyFrames>
-    									</Storyboard>
-    								</VisualState>
-    							</VisualStateGroup>
-    						</VisualStateManager.VisualStateGroups>
-    						<Grid>
-    							<Grid.ColumnDefinitions>
-    								<ColumnDefinition/>
-    								<ColumnDefinition Width="Auto"/>
-    								<ColumnDefinition Width="Auto"/>
-    							</Grid.ColumnDefinitions>
-    							<ContentControl x:Name="HeaderPresenter" CacheMode="BitmapCache" ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}" Style="{TemplateBinding HeaderStyle}"/>
-    							<TextBlock x:Name="ValidationMessage" Grid.Column="1" FontSize="{StaticResource PhoneFontSizeNormal}" Padding="0,0,0,2" Text="{TemplateBinding ValidationMessage}" Visibility="{Binding ValidationMessage, Converter={StaticResource TextToVisibilityConverter}, RelativeSource={RelativeSource TemplatedParent}}"/>
-    							<Image x:Name="ValidationImage" Grid.Column="2" Margin="8,0,0,0"/>
-    						</Grid>
-    						<Border x:Name="EnabledBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Grid.Row="1">
-    							<Grid Background="{StaticResource splitwiseGreyBG}">
-    								<Grid.ColumnDefinitions>
-    									<ColumnDefinition/>
-    									<ColumnDefinition Width="Auto"/>
-    									<ColumnDefinition Width="Auto"/>
-    								</Grid.ColumnDefinitions>
-    								<Grid.RowDefinitions>
-    									<RowDefinition/>
-    									<RowDefinition Height="Auto"/>
-    								</Grid.RowDefinitions>
-    								<ContentControl x:Name="ContentElement" BorderThickness="0" HorizontalContentAlignment="Stretch" Margin="{StaticResource PhoneTextBoxInnerMargin}" Padding="{TemplateBinding Padding}" VerticalContentAlignment="Stretch"/>
-    								<TextBlock x:Name="PART_Watermark" Foreground="Gray" Margin="{StaticResource PhoneTextBoxInnerMargin}" Padding="{TemplateBinding Padding}" TextAlignment="{TemplateBinding TextAlignment}" Text="{TemplateBinding Watermark}"/>
-    								<PhoneTextBox:TextBoxSecondaryButton x:Name="PART_ClearButton" ButtonType="Clear" Grid.Column="1" Style="{TemplateBinding ClearButtonStyle}"/>
-    								<PhoneTextBox:TextBoxActionButton x:Name="PART_ActionButton" Grid.Column="2" Style="{TemplateBinding ActionButtonStyle}" Visibility="{TemplateBinding ActionButtonVisibility}"/>
-    							</Grid>
-    						</Border>
-    						<Border x:Name="ValidationBorder" BorderThickness="0 0 0 3" Grid.Row="1"/>
-    						<telerikPrimitives:RadBusyIndicator x:Name="BusyIndicator" AnimationStyle="AnimationStyle9" Content="{x:Null}" Foreground="Black" Margin="0,0,0,-10" Grid.Row="1" VerticalAlignment="Bottom"/>
-    						<Border x:Name="DisabledOrReadonlyBorder" BorderBrush="{StaticResource PhoneDisabledBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="Transparent" Grid.Row="1" Visibility="Collapsed">
-    							<TextBox x:Name="DisabledOrReadonlyContent" Background="Transparent" Foreground="{StaticResource PhoneDisabledBrush}" FontWeight="{TemplateBinding FontWeight}" FontStyle="{TemplateBinding FontStyle}" FontSize="{TemplateBinding FontSize}" FontFamily="{TemplateBinding FontFamily}" IsReadOnly="True" SelectionForeground="{TemplateBinding SelectionForeground}" SelectionBackground="{TemplateBinding SelectionBackground}" TextAlignment="{TemplateBinding TextAlignment}" TextWrapping="{TemplateBinding TextWrapping}" Text="{TemplateBinding Text}" Template="{StaticResource PhoneDisabledTextBoxTemplate}"/>
-    						</Border>
-    					</Grid>
-    				</ControlTemplate>
-    			</Setter.Value>
-    		</Setter>
-    	</Style>
     </phone:PhoneApplicationPage.Resources>
-
-	<phone:PhoneApplicationPage.FontFamily>
-		<StaticResource ResourceKey="PhoneFontFamilyNormal"/>
-	</phone:PhoneApplicationPage.FontFamily>
-	<phone:PhoneApplicationPage.FontSize>
-		<StaticResource ResourceKey="PhoneFontSizeNormal"/>
-	</phone:PhoneApplicationPage.FontSize>
-	<phone:PhoneApplicationPage.Foreground>
-		<StaticResource ResourceKey="PhoneForegroundBrush"/>
-	</phone:PhoneApplicationPage.Foreground>
 <!--LayoutRoot is the root grid where all page content is placed-->
 	<Grid x:Name="LayoutRoot" Background="Transparent">
 		<Grid.RowDefinitions>
@@ -277,7 +66,17 @@
 
 			</Grid>
 
-			<telerikPrimitives:RadTextBox Grid.Row="1" x:Name="tbDetails" BorderThickness="0" Foreground="Black" Watermark="Enter additional details" AcceptsReturn="True" TextWrapping="Wrap" Padding="10" Height="250" VerticalAlignment="Top" Style="{StaticResource RadTextBoxStyle1}"/>
+            <telerikPrimitives:RadTextBox Grid.Row="1" 
+                                          x:Name="tbDetails" 
+                                          BorderThickness="0" 
+                                          Foreground="Black" 
+                                          Watermark="Enter additional details" 
+                                          AcceptsReturn="True" 
+                                          TextWrapping="Wrap" 
+                                          Padding="10" 
+                                          Height="250" 
+                                          VerticalAlignment="Top" 
+                                          Style="{StaticResource GreyBGRadTextBoxStyle}"/>
 
             <telerikPrimitives:RadBusyIndicator Background="#CC000000"
                                                 Foreground="White"
